--- a/_base/_variables.scss
+++ b/_base/_variables.scss
@@ -16,6 +16,7 @@ ________________________________________________________*/
     --vert-t: hsla(155, 30%, 37%, 0.664);
     --gris-tres-pale: hsl(0, 0%, 94%);
     --gris-pale: hsl(0, 0%, 89%);
+    --gris: hsl(0, 0%, 59%);
     --gris-fonce: hsl(0, 0%, 10%);
     --blanc: hsl(0, 0%, 100%);
     --noir: hsl(0, 0%, 0%);
