--- a/_base/_mixin.scss
+++ b/_base/_mixin.scss
@@ -21,6 +21,12 @@
     justify-content: center;
  }
 
+ @mixin flex-column-center2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
  @mixin flex-items-center{
      display: flex;
      align-items: center;
