--- a/_layout/_general.scss
+++ b/_layout/_general.scss
@@ -26,7 +26,7 @@ h2{
     }
 }
 
-.promotion, .fiche-produit{
+.promotion, .fiche-produit, .itemGridContenu{
     h2{
         &:after{
            @include ligne-after;
