--- a/_layout/_listeProduits.scss
+++ b/_layout/_listeProduits.scss
@@ -75,3 +75,93 @@
     }
     
 }
+
+// - - - - - - - - - - - - - - - - - - - - - - - - - - -
+// CSS de la couche de la liste des produits ADMIN
+// - - - - - - - - - - - - - - - - - - - - - - - - - - -
+
+
+.itemGridContenu{
+    .item-liste{
+        display: flex;
+        align-items: start;
+        padding: 1em;
+        margin: 2em 0;
+        background-color: var(--blanc);
+    
+        & img{
+            margin-right: 1em;
+            width: 8em;
+            height: auto;
+        }
+    
+        & h3{
+            font-weight: 400;
+            font-size: .9em;
+        }
+    
+        & p{
+            padding: 1em 0;
+            font-size: .8em;
+        }
+
+        & .item-info3{
+            padding: 0 2em;
+        }
+
+        & .item-icones{
+            display: flex;
+        
+            & i{
+                &:hover{
+                    color: var(--gris);
+                }
+            }
+
+            & i:first-of-type{
+                padding-right: 1em;
+            }
+        }
+    }
+
+    .popup-overlay{
+        visibility: hidden;
+        position: fixed; 
+        z-index: 1; 
+        padding: 15em 27em; 
+        left: 0;
+        top: 0;
+        width: 100%; 
+        height: 100%; 
+        overflow: auto; 
+        background-color: rgba(0,0,0,0.4); 
+    }
+
+    .popup-overlay.active {
+        visibility: visible;
+      }
+
+    .popup-content{
+        @include flex-column-center;
+        width: 30em;
+        height: 10em;
+        background-color: var(--blanc);
+        border: 2px solid var(--gris);
+
+        & p{
+            margin-bottom: 1em;
+            font-weight: 400;
+        }
+
+        & button{
+            @include button;
+            padding: 1em .5em;
+            background-color: var(--vert);
+            font-weight: 400;
+
+            &:hover{
+                background-color: var(--vert-fonce);
+            }
+        }
+    }
+}
